--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                     where I am advised by
                     <a href="https://www.zhaowei.us/" target="_blank">Zhaowei Liu</a>
                     and was a reciepient of the 
-                    <a href="https://www.nsfgrfp.org/" target="_blank">NSF Graduate Research Fellowship</a>. I also have experience in industy working at 
+                    <a href="https://www.nsfgrfp.org/" target="_blank">NSF Graduate Research Fellowship</a>. I also have industry experience at 
                     <a href="https://www.meta.com/" target="_blank">Meta</a> Reality Labs as a research scientist intern
                     working on optimization of diffractive structures for AR displays and at
-                    <a href="https://www.elementbiosciences.com/" target="_blank">Element Biosciences</a> as a data scientist devolping 
+                    <a href="https://www.elementbiosciences.com/" target="_blank">Element Biosciences</a> as a data scientist developing 
                     computer vision algorithms for spatial genomics.
                 </p>
                 <div class="intro-links">
@@ -48,7 +48,7 @@
         <section class="news">
             <h2>News</h2>
             <div class="news-item">
-                <img src="photos/png-clipart-meta-logo-social-media-icons.jpg" alt="News 1">
+                <img src="photos/meta-logo.png" alt="News 1">
                 <div class="news-content">
                     <h3>Summer Internship <span>(June 2024)</span></h3>
                     <p>This summer I was a research scientist intern at Meta Reality Labs working on developing new computational
@@ -56,15 +56,16 @@
                     </p>
                 </div>
             </div>
-            <!---
+            <!--
             <div class="news-item">
-                <img src="news-image-2.jpg" alt="News 2">
+                <img src="photos/NSF_Official_logo_Med_Res.png" alt="News 2">
                 <div class="news-content">
-                    <h3>Published a new paper <span>(December 2024)</span></h3>
-                    <p>Check out my latest publication on blind-SIM reconstruction techniques in Nature Communications.</p>
+                    <h3>NSF Fellowship <span>(April 2021)</span></h3>
+                    <p>I was awarded the NSF graduate research program fellowship (GRFP).</p>
                 </div>
             </div>
             -->
+            
         </section>
     </div>
 </body>
